# SYMA2

./: README.md
BarProject/: .tracepoints  BarProject.mlproj  BarProject.mlsim
BarProject/__sandbox/: BarProject.protos  BarProject.sim
BarProject/__sandbox/decision/: BarMan.bt  Bob.bt  HelloWorld.bt  WalkingAround.bt
BarProject/__sandbox/implementation/: BARPROJECT_implementation_lib_vc100-mt-gd.ilk  BarLib.mllib  BarProject-lib.mllib  BarProject_-mt-gd.ilk
BarProject/__sandbox/implementations/: BARPROJECT_implementation_lib_vc100-mt-gd.ilk  BarProject.mllib
BarProject/__sandbox/knowledge/: Bob.mlkb
BarProject/__sandbox/navigation/: Walking.nb
BarProject/__sandbox/scene/: Bar.mlscene
BarProject/decision/: BarMan.mlbt  Bob.mlbt  HelloWorld.mlbt  SelectAction.mlbt  SelectDestination.mlbt  WalkingAround.mlbt  buy_drink.mlbt  talk.mlbt
BarProject/implementation/src/: ContactComponent.cpp  ContactComponent.h
BarProject/implementations/src/: CMakeLists.txt  ContactComponent.cpp  ContactComponent.h  ImplementationLibrary.cpp  ImplementationLibrary.h  InterpolateEntityPositionAction.cpp  InterpolateEntityPositionAction.h
BarProject/knowledge/: Barman.mlkb  Bob.mlkb  Global.mlkb
BarProject/navigation/: Walking.mlnb  navmesh.mlnv
BarProject/prototypes/: BOb.mlent  BarMan.mlent  Customers.mlent
BarProject/scene/: Bar_birds_eye.mlcam
BarProject/simulation/: BarLib.mlsim  Entities.mlpop
FightInBar/: .tracepoints  FightInBar.launch  FightInBar.mlproj  FightInBar.mlsim
FightInBar/__sandbox/decision/: Barman.bt  Customer.bt  Security.bt
FightInBar/__sandbox/implementations/: FIGHTINBAR_implementation_lib_vc100-mt-gd.ilk
FightInBar/__sandbox/knowledge/: customer.mlkb  moving.mlkb
FightInBar/decision/: Barman.mlbt  Customer.mlbt  Exit.mlbt  Security.mlbt  buy_drink.mlbt  fight.mlbt
FightInBar/implementations/: barLib.mllib
FightInBar/implementations/src/: CMakeLists.txt  ContactComponent.cpp  ContactComponent.h  ImplementationLibrary.cpp  ImplementationLibrary.h  IncrementAction.cpp  IncrementAction.h  Plugin.cpp  setEntityBooleanAction.cpp  setEntityBooleanAction.h
FightInBar/navigation/: Simple.mlnb  navmesh.mlnv
FightInBar/prototypes/: Ancestor.mlent  Barman.mlent  Customer.mlent  Security.mlent
FightInBar/scene/: Bar.mlscene  Bar_free.mlcam
FightInBar/simulation/: Entities.mlpop
Visual/BarProject/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BARPROJECT.opensdf  BARPROJECT.sln  BARPROJECT_implementation_lib.vcxproj  BARPROJECT_implementation_lib.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Visual_FightInBar/FightInBar/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FIGHTINBAR.sln  FIGHTINBAR_implementation_lib.vcxproj  FIGHTINBAR_implementation_lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+79 files in other folders)
